Working demo (open, close, read, write) and TODO: delete